--- a/src/components/Carousel/InfiniteCarousel.module.css
+++ b/src/components/Carousel/InfiniteCarousel.module.css
@@ -8,14 +8,14 @@
   }
   
   .carouselContainer {
-    overflow: hidden; /* Esconde o conteúdo fora dos limites */
+    display: flex;
+    overflow: hidden; /* Esconde conteúdo fora da faixa */
+    white-space: nowrap; /* Evita quebra de linha */
     position: relative;
-    width: 100%;
   }
   
   .carouselTrack {
     display: flex;
-    animation: scroll 15s linear infinite; /* Animação contínua */
-    width: calc(200%); /* Duplicamos o conteúdo */
+    animation: scroll 20s linear infinite; /* Animação contínua */
   }
   
