--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'VenusRising';
+    src: url('/fonts/VenusRising.otf') format('woff2');
+    font-weight: normal;
+    font-style: normal; 
+  }
